individual step alignment issue fixed

--- a/assets/css/howto.css
+++ b/assets/css/howto.css
@@ -22,10 +22,6 @@
     margin-bottom: 10px;
 }
 
-/* .mt-has-img.mt-step-img-right .mt-how-to-step-content {
-    width: 60%;
-} */
-
 .mt-has-img.mt-step-img-right .mt-how-to-step-image {
     width: 40%;
     margin-left: 10px;
@@ -42,10 +38,6 @@
 .mt-has-img.mt-step-img-left {
     flex-direction: row-reverse;
 }
-
-/* .mt-has-img.mt-step-img-left .mt-how-to-step-content {
-    width: 60%;
-} */
 
 .mt-has-img.mt-step-img-left .mt-how-to-step-image {
     width: 40%;
@@ -115,28 +107,4 @@ p {
 
 .mt-how-to-image img {
     display: inline;
-}
-
-.mt-how-to-step-content-flex-start {
-    align-self: flex-start;
-}
-
-.mt-how-to-step-content-center {
-    align-self: center;
-}
-
-.mt-how-to-step-content-flex-end {
-    align-self: flex-end;
-}
-
-.mt-how-to-step-image-flex-start {
-    align-self: flex-start;
-}
-
-.mt-how-to-step-image-center {
-    align-self: center;
-}
-
-.mt-how-to-step-image-flex-end {
-    align-self: flex-end;
 }
